# LeeFramework

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  memo.txt
assets/: checkerPlane.ply
shader/: FragmentShader.glsl  VertexShader.glsl
src/: sampleScene.cpp  sampleScene2.cpp
src/Geometry/: Material.hpp  MeshLoader.cpp  MeshLoader.hpp  PhysicsEntity.cpp  PhysicsEntity.hpp  Shape.cpp  Shape.hpp  Texture.cpp  Texture.hpp
src/Handler/: Handler.cpp  Handler.hpp
src/IO/: MeshLoader.cpp  MeshLoader.hpp
src/Mesh/: Mesh.cpp  Mesh.hpp  MeshIO.cpp  MeshIO.hpp  PrimitiveMesh.cpp  PrimitiveMesh.hpp  ToyMesh.cpp  ToyMesh.hpp
src/Physics/: Constraint.cpp  Constraint.hpp  PhyEngine.cpp  PhyEngine.hpp  PhysicsEntity.cpp  PhysicsEntity.hpp
src/Physics/Collision/: CollisionHandler.cpp  CollisionHandler.hpp  CollisionManager.cpp  CollisionManager.hpp  GameMaths.h
src/Renderer/: Camera.cpp  Camera.hpp  GUIwrapper.cpp  GUIwrapper.hpp  GraphicsEntity.cpp  GraphicsEntity.hpp  InputHandler.cpp  InputHandler.h  InputHandler.hpp  Light.cpp  Light.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/Renderer/Material/: Shape.cpp
src/utils/: UtilHeader.h  debugUtils.cpp  mathUtils.cpp
test/: CMakeLists.txt  CameraTest.cpp
utils/: debugUtils.cpp
